--- a/style.css
+++ b/style.css
@@ -53,8 +53,8 @@ p, div, h1, h2, h3, h4, h5, h6, li {
 }
 
 .icon {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 16px;
+  height: 16px;
 }
 
 p:focus, div:focus, h1:focus, h2:focus, h3:focus, h4:focus, h5:focus, h6:focus, li:focus {
