--- a/styles/customization.scss
+++ b/styles/customization.scss
@@ -3,8 +3,8 @@
  * GLOBAL
 */
 :root {
-  --sans-font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  --mono-font: 'nf-fira-mono', 'Fira Mono', 'Hack', 'Consolas', monospace;
+  --sans-font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
+  --mono-font: 'nf-fira-mono', 'Fira Mono', 'Hack', 'Consolas', monospace !important;
 }
 /* LIGHT THEME */
 .light {
@@ -17,7 +17,7 @@ a {}
 p {}
 div.codeblock {}
 button {}
-a::before { content: "<i class=\"nf nf-fa-link_external></i>"; }
+a::before { content: " "; }
 a::after {}
 /* IMPORTS */
 @import "https://www.nerdfonts.com/assets/css/webfont.css";
@@ -43,6 +43,16 @@ a::after {}
 
 
 /* SOURCE CODE, DO NOT TOUCH IF YOU DON'T KNOW WHAT YOU'RE DOING!!! */
+
+@font-face {
+  font-family: nf-fira-mono;
+  src: url(/fonts/nf-fira-mono.woff2) format(woff2);
+}
+
+@font-face {
+  font-family: nf-aurulent;
+  src: url(/fonts/nf-aurulent.woff2) format(woff2);
+}
 
 :root {
   /* Common colors for all themes */
