(main): compile scss

--- a/styles/source.scss
+++ b/styles/source.scss
@@ -1,187 +1,1 @@
-$sans-font: 'nf-aurulent', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !default;
-$mono-font: 'nf-fira-mono', 'Fira Mono', 'Hack', 'Consolas', monospace !default;
-$transition-speed: 0.3s;
-
-// Nord variables
-$nord0: #2e3440;
-$nord2: #434c5e;
-$nord4: #d8dee9;
-$nord6: #eceff4;
-$nord8: #88c0d0;
-$nord9: #81a1c1;
-$nord10: #5e81ac;
-
-.nord-light {
-  background-color: $nord6;
-  color: $nord0;
-  font-family: $sans-font;
-  transition: background-color $transition-speed,
-            color $transition-speed;
-}
-
-.nord-dark {
-  background-color: $nord0;
-  color: $nord4;
-  font-family: $sans-font;
-  transition: background-color $transition-speed,
-              color $transition-speed;
-}
-
-a {
-  color: $nord10;
-  text-decoration: none;
-
-  &:before {
-    content: "↗ "
-  }
-  &:focus {
-    outline: 2px dashed $nord9;
-    outline-offset: 2px;
-  }
-
-  .nord-light & {
-    color: $nord10;
-    
-    &:focus {
-      outline-color: $nord9;
-    }
-  }
-
-  .nord-dark & {
-    color: $nord8;
-    
-    &:focus {
-      outline-color: $nord9;
-    }
-  }
-}
-
-div.codeblock {
-  font-family: $mono-font;
-  border-radius: 10px;
-  border: 2px solid $nord10;
-  padding: 1em;
-  transition: background-color $transition-speed,
-              color $transition-speed,
-              border-color $transition-speed;
-
-  .nord-light & {
-    background-color: $nord6;
-    color: $nord0;
-    border-color: $nord10;
-
-    &:hover {
-      border-color: $nord9;
-    }
-  }
-
-  .nord-dark & {
-    background-color: $nord0;
-    color: $nord4;
-    border-color: $nord8;
-
-    &:hover {
-      border-color: $nord9;
-    }
-  }
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 50px;
-  height: 24px;
-  margin: 10px 0;
-
-  input { 
-    opacity: 0;
-    width: 0;
-    height: 0;
-
-    &:checked + .slider {
-      background-color: $nord8;
-
-      &:before {
-        transform: translateX(26px);
-      }
-    }
-  }
-}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  background-color: #ccc;
-  border-radius: 24px;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  transition: 0.4s;
-
-  &:before {
-    position: absolute;
-    content: "";
-    height: 18px;
-    width: 18px;
-    left: 3px;
-    bottom: 3px;
-    background-color: white;
-    border-radius: 50%;
-    transition: 0.4s;
-  }
-}
-
-p, div, h1, h2, h3, h4, h5, h6, li {
-  font-family: $sans-font;
-  outline: none;
-
-  &:focus {
-    .nord-light & {
-      outline: 2px dotted $nord10;
-      outline-offset: 2px;
-    }
-
-    .nord-dark & {
-      outline: 2px dotted $nord8;
-      outline-offset: 2px;
-    }
-  }
-}
-
-.icon {
-  width: 16px;
-  height: 16px;
-}
-
-.nord-light ::selection {
-  background-color: $nord4;
-  color: $nord0;
-}
-
-.nord-dark ::selection {
-  background-color: $nord2;
-  color: $nord6;
-}
-
-input, textarea {
-  font-family: $sans-font;
-
-  .nord-light & {
-    caret-color: $nord10;
-  }
-
-  .nord-dark & {
-    caret-color: $nord8;
-  }
-}
-
-body:focus {
-  .nord-light & {
-    outline: 1px solid $nord10;
-  }
-
-  .nord-dark & {
-    outline: 1px solid $nord8;
-  }
-}
+﻿.nord-light{background-color:#eceff4;color:#2e3440;font-family:"nf-aurulent","Segoe UI",Tahoma,Geneva,Verdana,sans-serif;transition:background-color .3s,color .3s}.nord-dark{background-color:#2e3440;color:#d8dee9;font-family:"nf-aurulent","Segoe UI",Tahoma,Geneva,Verdana,sans-serif;transition:background-color .3s,color .3s}a{color:#5e81ac;text-decoration:none}a:before{content:"↗ "}a:focus{outline:2px dashed #81a1c1;outline-offset:2px}.nord-light a{color:#5e81ac}.nord-light a:focus{outline-color:#81a1c1}.nord-dark a{color:#88c0d0}.nord-dark a:focus{outline-color:#81a1c1}div.codeblock{font-family:"nf-fira-mono","Fira Mono","Hack","Consolas",monospace;border-radius:10px;border:2px solid #5e81ac;padding:1em;transition:background-color .3s,color .3s,border-color .3s}.nord-light div.codeblock{background-color:#eceff4;color:#2e3440;border-color:#5e81ac}.nord-light div.codeblock:hover{border-color:#81a1c1}.nord-dark div.codeblock{background-color:#2e3440;color:#d8dee9;border-color:#88c0d0}.nord-dark div.codeblock:hover{border-color:#81a1c1}.switch{position:relative;display:inline-block;width:50px;height:24px;margin:10px 0}.switch input{opacity:0;width:0;height:0}.switch input:checked+.slider{background-color:#88c0d0}.switch input:checked+.slider:before{transform:translateX(26px)}.slider{position:absolute;cursor:pointer;background-color:#ccc;border-radius:24px;top:0;left:0;right:0;bottom:0;transition:.4s}.slider:before{position:absolute;content:"";height:18px;width:18px;left:3px;bottom:3px;background-color:#fff;border-radius:50%;transition:.4s}p,div,h1,h2,h3,h4,h5,h6,li{font-family:"nf-aurulent","Segoe UI",Tahoma,Geneva,Verdana,sans-serif;outline:none}.nord-light p:focus,.nord-light div:focus,.nord-light h1:focus,.nord-light h2:focus,.nord-light h3:focus,.nord-light h4:focus,.nord-light h5:focus,.nord-light h6:focus,.nord-light li:focus{outline:2px dotted #5e81ac;outline-offset:2px}.nord-dark p:focus,.nord-dark div:focus,.nord-dark h1:focus,.nord-dark h2:focus,.nord-dark h3:focus,.nord-dark h4:focus,.nord-dark h5:focus,.nord-dark h6:focus,.nord-dark li:focus{outline:2px dotted #88c0d0;outline-offset:2px}.icon{width:16px;height:16px}.nord-light ::selection{background-color:#d8dee9;color:#2e3440}.nord-dark ::selection{background-color:#434c5e;color:#eceff4}input,textarea{font-family:"nf-aurulent","Segoe UI",Tahoma,Geneva,Verdana,sans-serif}.nord-light input,.nord-light textarea{caret-color:#5e81ac}.nord-dark input,.nord-dark textarea{caret-color:#88c0d0}.nord-light body:focus{outline:1px solid #5e81ac}.nord-dark body:focus{outline:1px solid #88c0d0}details{font-family:"nf-aurulent","Segoe UI",Tahoma,Geneva,Verdana,sans-serif;border-radius:8px;padding:8px;margin:.5em 0;border:2px solid #5e81ac;transition:background-color .3s,border-color .3s,color .3s}details[open]{border-color:#81a1c1}details summary{cursor:pointer;font-weight:bold;list-style:none;display:flex;align-items:center;user-select:none}details summary::-webkit-details-marker{display:none}details summary::before{content:"";display:inline-block;width:6px;height:6px;border-right:2px solid currentColor;border-bottom:2px solid currentColor;transform:rotate(45deg);margin-right:6px;transition:transform .3s ease;vertical-align:middle}details[open] summary::before{transform:rotate(135deg)}.nord-light details{background-color:#eceff4;color:#2e3440;border-color:#5e81ac}.nord-light details summary::before{border-color:#2e3440}.nord-light details[open]{background-color:rgb(252.15,252.6,253.35);border-color:#81a1c1}.nord-dark details{background-color:#2e3440;color:#d8dee9;border-color:#88c0d0}.nord-dark details summary::before{border-color:#d8dee9}.nord-dark details[open]{background-color:hsl(220,16.3636363636%,16.568627451%);border-color:#81a1c1}/*# sourceMappingURL=source.scss.map */
